--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "axios": "^1.3.3",
     "better-sqlite3": "^8.1.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "winston": "^3.8.2"
