--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@iamtraction/google-translate": "^2.0.1",
     "axios": "^1.3.3",
     "better-sqlite3": "^8.1.0",
     "cookie-parser": "^1.4.6",
