--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "winston": "^3.8.2"
+    "readline-sync": "^1.4.10",
+    "winston": "^3.8.2",
+    "yargs": "^17.7.1"
   }
 }
