--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "readline-sync": "^1.4.10",
     "winston": "^3.8.2",
     "yargs": "^17.7.1"
