--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "author": "1RandomDev",
   "license": "GPL-3.0",
+  "type": "module",
   "dependencies": {
     "@iamtraction/google-translate": "^2.0.1",
     "axios": "^1.3.3",
     "better-sqlite3": "^8.1.0",
     "cookie-parser": "^1.4.6",
+    "crypto-random-string": "^5.0.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
